force-app/main/default/objects/col_Project__c/col_Project__c.object-meta.xml
<CustomObject>
    <description>Represents an SHS Research and Development Project.</description>
    <label>Project</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>