force-app/main/default/objects/col_Project__c/fields/col_AdditionalPartnerInformation__c.field-meta.xml
<CustomField>
    <fullName>col_AdditionalPartnerInformation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please describe why this particular Partner was selected for your research project, what is the site&apos;s strategic partnership value, its reputation, expertise, work history with SHS,...</inlineHelpText>
    <label>Additional Partner Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>