force-app/main/default/objects/col_Project__c/fields/col_AgreementNumber__c.field-meta.xml
<CustomField>
    <fullName>col_AgreementNumber__c</fullName>
    <formula>col_LinkedAgreement__r.Apttus__FF_Agreement_Number__c</formula>
    <label>Agreement Number</label>
    <type>Text</type>
</CustomField>