force-app/main/default/objects/col_Project__c/fields/col_AlreadyBudgeted__c.field-meta.xml
<CustomField>
    <fullName>AlreadyBudgeted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the project been already budgeted for in the current FY?</inlineHelpText>
    <label>Already Budgeted?</label>
    <type>Checkbox</type>
</CustomField>