force-app/main/default/objects/col_Project__c/fields/col_AmendmentStatus__c.field-meta.xml
<CustomField>
    <fullName>col_AmendmentStatus__c</fullName>
    <description>Amendment Status of the project</description>
    <inlineHelpText>Amendment Status of the project</inlineHelpText>
    <label>Amendment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>col_AmendmentStatus</valueSetName>
    </valueSet>
</CustomField>