force-app/main/default/objects/col_Project__c/fields/col_AmendmentVersion__c.field-meta.xml
<CustomField>
    <fullName>col_AmendmentVersion__c</fullName>
    <description>This field contains the current version of the Amendment.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Amendment Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>