force-app/main/default/objects/col_Project__c/fields/col_ClosingReason__c.field-meta.xml
<CustomField>
    <fullName>col_ClosingReason__c</fullName>
    <description>Indicates the reason why a project is closed</description>
    <label>Closing Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>