force-app/main/default/objects/col_Project__c/fields/col_ClosureDescription__c.field-meta.xml
<CustomField>
    <fullName>col_ClosureDescription__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Closure Description</label>
    <type>TextArea</type>
</CustomField>