force-app/main/default/objects/col_Project__c/fields/col_CollaborationPartnerSinceFilled__c.field-meta.xml
<CustomField>
    <fullName>col_CollaborationPartnerSinceFilled__c</fullName>
    <formula>NOT(ISNULL(col_ContractingParty__r.col_CollaborationPartnerSince__c))</formula>
    <label>Collaboration Partner Since Filled</label>
    <type>Checkbox</type>
</CustomField>