force-app/main/default/objects/col_Project__c/fields/col_CollaborationReason__c.field-meta.xml
<CustomField>
    <fullName>CollaborationReason__c</fullName>
    <description>Indicates the reason for having the project</description>
    <label>Project Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CollaborationReason</valueSetName>
    </valueSet>
</CustomField>