force-app/main/default/objects/col_Project__c/fields/col_ComplianceApproval__c.field-meta.xml
<CustomField>
    <fullName>col_ComplianceApproval__c</fullName>
    <description>Maintains the status of the possible Compliance Approval</description>
    <label>Compliance Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>col_ApprovalStatus</valueSetName>
    </valueSet>
</CustomField>