force-app/main/default/objects/col_Project__c/fields/col_ContractGovernance__c.field-meta.xml
<CustomField>
    <fullName>ContractGovernance__c</fullName>
    <description>Defines the Contract governance based on the Contract Type values. Its possible CollApp-specific values are defined in the ProjectContracting__mdt Custom Metadata records.</description>
    <label>Contract Governance</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ContractType__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>ContractGovernance</valueSetName>
    </valueSet>
</CustomField>