force-app/main/default/objects/col_Project__c/fields/col_ContractingParty__c.field-meta.xml
<CustomField>
    <fullName>col_ContractingParty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The external collaboration partner whom Siemens contracts with.</description>
    <inlineHelpText>An Account is selectable if it is External Account, its Status is &quot;Active&quot; and its Type is &quot;CMD&quot;</inlineHelpText>
    <label>Contracting Party</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>External</value>
        </filterItems>
        <filterItems>
            <field>Account.SHS_Account_status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>Account.SHS_Account_type__c</field>
            <operation>equals</operation>
            <value>CMD</value>
        </filterItems>
        <filterItems>
            <field>Account.SHS_Designated_CLMA_Account__c</field>
            <operation>notContain</operation>
            <value>AC-, Obsolete</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (Contracting Party)</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>