force-app/main/default/objects/col_Project__c/fields/col_ContractType__c.field-meta.xml
<CustomField>
    <fullName>col_ContractType__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>col_ContractType</valueSetName>
    </valueSet>
</CustomField>