force-app/main/default/objects/col_Project__c/fields/col_CPContractOwner__c.field-meta.xml
<CustomField>
    <fullName>CPContractOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field not exposed in the user interface to store the user input from the project-agreement conversion</description>
    <label>CPContractOwner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (CPContactOwner)</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>