force-app/main/default/objects/col_Project__c/fields/col_DAMEXCheck__c.field-meta.xml
<CustomField>
    <fullName>col_DAMEXCheck__c</fullName>
    <description>Field used to document if the DAMEX-check was completed (Export Control)</description>
    <label>DAMEX-Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Please select</fullName>
                <default>true</default>
                <label>Please select</label>
            </value>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>In process</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>