force-app/main/default/objects/col_Project__c/fields/col_DataCollectionIntended__c.field-meta.xml
<CustomField>
    <fullName>col_DataCollectionIntended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to document if data collection is intended (Data Privacy Approval)</description>
    <label>Data Collection Intended?</label>
    <type>Checkbox</type>
</CustomField>