force-app/main/default/objects/col_Project__c/fields/col_Departmentalrestriction__c.field-meta.xml
<CustomField>
    <fullName>Departmentalrestriction__c</fullName>
    <description>Used in Apex Sharing.</description>
    <inlineHelpText>The need-to-know principle is sufficiently covered with the access and permission scheme implemented in Conga Standard CLMA. However, for few highly confidential agreements, a specific additional layer of access restrictions may be needed on departmental level. Please select in case one of the following specific restrictions applies: M&amp;A Department, LC CL Department or Real Estate Department</inlineHelpText>
    <label>Departmental restriction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M&amp;A Department</fullName>
            </value>
            <value>
                <fullName>LC CL Department</fullName>
            </value>
            <value>
                <fullName>Real Estate Department</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>