force-app/main/default/objects/col_Project__c/fields/col_FairMarketValue__c.field-meta.xml
<CustomField>
    <fullName>col_FairMarketValue__c</fullName>
    <description>Fair Market Value based on the Deliverables</description>
    <formula>col_TotalDelValue__c -  col_TotalPartnerDelValue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated as follows: Total SHS Deliverable Value - Total Partner Deliverable Value</inlineHelpText>
    <label>Fair Market Value equivalent?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>