force-app/main/default/objects/col_Project__c/fields/col_FirstProjectWithPartner__c.field-meta.xml
<CustomField>
    <fullName>FirstProjectWithPartner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check box whether this is the very first project conducted with this collaboration partner</description>
    <inlineHelpText>Please check this box, if this is the very first project conducted with this collaboration partner</inlineHelpText>
    <label>First project with this partner</label>
    <type>Checkbox</type>
</CustomField>