force-app/main/default/objects/col_Project__c/fields/col_FirstProjectWithPartnerHelper__c.field-meta.xml
<CustomField>
    <fullName>col_FirstProjectWithPartnerHelper__c</fullName>
    <formula>col_FirstProjectWithPartner__c</formula>
    <label>First Project With Partner Helper</label>
    <type>Checkbox</type>
</CustomField>