force-app/main/default/objects/col_Project__c/fields/col_FiscalYear__c.field-meta.xml
<CustomField>
    <fullName>col_FiscalYear__c</fullName>
    <formula>if(Month(DateValue(CreatedDate)) &lt; 10 , 
  RIGHT(TEXT(YEAR(DateValue(CreatedDate))), 2), 
  RIGHT(TEXT(YEAR(DateValue(CreatedDate)) + 1), 2) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Year</label>
    <type>Text</type>
</CustomField>