force-app/main/default/objects/col_Project__c/fields/col_Function__c.field-meta.xml
<CustomField>
    <fullName>col_Function__c</fullName>
    <label>Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SHS_Functions</valueSetName>
    </valueSet>
</CustomField>