force-app/main/default/objects/col_Project__c/fields/col_GeneralComplianceReleaseapplies__c.field-meta.xml
<CustomField>
    <fullName>col_GeneralComplianceReleaseapplies__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please tick this box if a General Compliance Release (GCR) applies for this project. Please check the GCRs stored at https://healthineers.sharepoint.com/sites/999-00001666/co/SitePages/Public%20Documents.aspx?InitialTabId=Ribbon%2ERead&amp;VisibilityContext=WSSTabPersistence#Tab6MSOZoneCell_WebPartWPQ23</inlineHelpText>
    <label>General Compliance Release applies</label>
    <type>Checkbox</type>
</CustomField>