force-app/main/default/objects/col_Project__c/fields/col_HasDeliverables__c.field-meta.xml
<CustomField>
    <fullName>col_HasDeliverables__c</fullName>
    <description>Formulafield with values( EMPTY, 0 and 1):

- 0, when  the Project has the Contract Types: Core Competence Partnership (C2P), Data Privacy (DP), Letter of Intent (LOI), Master Research Agreement (MRA) ,Non Disclosure Agreement (NDA) OR Software Licence (SWLIC).
- 1 if Number of Deliverables is greater zero
- EMPTY in all other cases.

With the EMPTY value the Stage Key field shows &quot;Add Deliverables&quot;.</description>
    <formula>IF (
     OR(
          ISPICKVAL(col_ContractType__c, &quot;C2P&quot;), 
          ISPICKVAL(col_ContractType__c, &quot;DP&quot;),
          ISPICKVAL(col_ContractType__c, &quot;LOI&quot;),
          ISPICKVAL(col_ContractType__c, &quot;MRA&quot;),
          ISPICKVAL(col_ContractType__c, &quot;NDA&quot;),
          ISPICKVAL(col_ContractType__c, &quot;SWLIC&quot;)
        ),
      0,
      IF( 
          col_NumberOfDeliverables__c &gt; 0, 
          1, 
          NULL
        )
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Add Deliverables</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>