force-app/main/default/objects/col_Project__c/fields/col_HQCollaborationManager__c.field-meta.xml
<CustomField>
    <fullName>HQCollaborationManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This fields defines who is assigned as HQ Collaboration Manager for a given CollApp project</description>
    <label>HQ Collaboration Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal</value>
        </filterItems>
        <filterItems>
            <field>Contact.LinkedUser__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (HQ Collaboration Manager)</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>