force-app/main/default/objects/col_Project__c/fields/col_InitiatingIdea__c.field-meta.xml
<CustomField>
    <fullName>InitiatingIdea__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If populated, it refers to an Idea created as a Lead record.</description>
    <label>Initiating Idea</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>