force-app/main/default/objects/col_Project__c/fields/col_InventionDescription__c.field-meta.xml
<CustomField>
    <fullName>InventionDescription__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Invention Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>