force-app/main/default/objects/col_Project__c/fields/col_IPDescription__c.field-meta.xml
<CustomField>
    <fullName>IPDescription__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Intellectual Property Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>