force-app/main/default/objects/col_Project__c/fields/col_IsInvention__c.field-meta.xml
<CustomField>
    <fullName>IsInvention__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invention Created</label>
    <type>Checkbox</type>
</CustomField>