force-app/main/default/objects/col_Project__c/fields/col_IsIP__c.field-meta.xml
<CustomField>
    <fullName>IsIP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if there was Intellectual Property created during the Project lifecycle</description>
    <label>Intellectual Property Created</label>
    <type>Checkbox</type>
</CustomField>