force-app/main/default/objects/col_Project__c/fields/col_IsOther__c.field-meta.xml
<CustomField>
    <fullName>IsOther__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other</label>
    <type>Checkbox</type>
</CustomField>