force-app/main/default/objects/col_Project__c/fields/col_IsPatent__c.field-meta.xml
<CustomField>
    <fullName>col_IsPatent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, there has been a patent filed.</description>
    <label>Patent Created</label>
    <type>Checkbox</type>
</CustomField>