force-app/main/default/objects/col_Project__c/fields/col_IsPublications__c.field-meta.xml
<CustomField>
    <fullName>IsPublications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Publications Created</label>
    <type>Checkbox</type>
</CustomField>