force-app/main/default/objects/col_Project__c/fields/col_IsShowAllFields__c.field-meta.xml
<CustomField>
    <fullName>IsShowAllFields__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, the Record Page shall display fields which are using this as condition.</description>
    <label>Show All Fields</label>
    <type>Checkbox</type>
</CustomField>