force-app/main/default/objects/col_Project__c/fields/col_IsStageCompleted__c.field-meta.xml
<CustomField>
    <fullName>IsStageCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True of all Stage fields required for this Stage and ALL previous Stages are populated. The Project can only move forward of this field is true. The field is set by Apex after each insert and update, based on the ProjectStageFields__mdt custom metadata type records.</description>
    <label>Is Stage Completed</label>
    <type>Checkbox</type>
</CustomField>