force-app/main/default/objects/col_Project__c/fields/col_LastAgreement__c.field-meta.xml
<CustomField>
    <fullName>LastAgreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Looks up to the last CLMA Amendment record. always updated once a new Amendment is created from the same project.</description>
    <inlineHelpText>The last generated Amendment Agreement, if there is any.</inlineHelpText>
    <label>Last Amendment</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Projects (Last Amendment)</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>