force-app/main/default/objects/col_Project__c/fields/col_LinkedAgreement__c.field-meta.xml
<CustomField>
    <fullName>col_LinkedAgreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the related CLMA Agreement</description>
    <inlineHelpText>Looks up to the latest Agreement. It may be the latest Amendment record.</inlineHelpText>
    <label>Linked Agreement</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>