force-app/main/default/objects/col_Project__c/fields/col_LinkedLead__c.field-meta.xml
<CustomField>
    <fullName>col_LinkedLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Lead which was converted to this Project</description>
    <inlineHelpText>The Lead which was converted to this Project</inlineHelpText>
    <label>Linked Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>ProjectLeads</relationshipName>
    <type>Lookup</type>
</CustomField>