force-app/main/default/objects/col_Project__c/fields/col_LinkedProject__c.field-meta.xml
<CustomField>
    <fullName>col_LinkedProject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to another existing project (self-relationship)</description>
    <label>Linked Project</label>
    <referenceTo>col_Project__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>