force-app/main/default/objects/col_Project__c/fields/col_LongDescription__c.field-meta.xml
<CustomField>
    <fullName>col_LongDescription__c</fullName>
    <description>Longer description of the project: unlike the Short Description this can also include confidential information</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Long Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>