force-app/main/default/objects/col_Project__c/fields/col_NumberOfDeliverables__c.field-meta.xml
<CustomField>
    <fullName>NumberOfDeliverables__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Rollup field for Deliverable Count</description>
    <label>Number of Deliverables</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>