force-app/main/default/objects/col_Project__c/fields/col_NumberOfInventions__c.field-meta.xml
<CustomField>
    <fullName>col_NumberOfInventions__c</fullName>
    <label>Number of Inventions</label>
    <summaryFilterItems>
        <field>col_Outcome__c.col_Type__c</field>
        <operation>equals</operation>
        <value>Invention</value>
    </summaryFilterItems>
    <summaryForeignKey>col_Outcome__c.col_Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>