force-app/main/default/objects/col_Project__c/fields/col_NumberOfOutcomes__c.field-meta.xml
<CustomField>
    <fullName>col_NumberOfOutcomes__c</fullName>
    <label>Number of Outcomes</label>
    <summaryForeignKey>col_Outcome__c.col_Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>