force-app/main/default/objects/col_Project__c/fields/col_NumberOfPatents__c.field-meta.xml
<CustomField>
    <fullName>NumberOfPatents__c</fullName>
    <label>Number of Patents</label>
    <summaryFilterItems>
        <field>Outcome__c.Type__c</field>
        <operation>equals</operation>
        <value>Patent</value>
    </summaryFilterItems>
    <summaryForeignKey>Outcome__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>