force-app/main/default/objects/col_Project__c/fields/col_NumberOfPublications__c.field-meta.xml
<CustomField>
    <fullName>NumberOfPublications__c</fullName>
    <label>Number of Publications</label>
    <summaryFilterItems>
        <field>Outcome__c.Type__c</field>
        <operation>equals</operation>
        <value>Publication</value>
    </summaryFilterItems>
    <summaryForeignKey>Outcome__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>