force-app/main/default/objects/col_Project__c/fields/col_OtherDetails__c.field-meta.xml
<CustomField>
    <fullName>OtherDetails__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>