force-app/main/default/objects/col_Project__c/fields/col_ParentProject__c.field-meta.xml
<CustomField>
    <fullName>ParentProject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the Project is in a child relationship with a Parent project, it links to the Parent</description>
    <inlineHelpText>The Parent project record reference</inlineHelpText>
    <label>Parent Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Projects (Parent Project)</relationshipLabel>
    <relationshipName>ChildProjects</relationshipName>
    <type>Lookup</type>
</CustomField>