force-app/main/default/objects/col_Project__c/fields/col_PatentDescription__c.field-meta.xml
<CustomField>
    <fullName>col_PatentDescription__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Patent Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>