force-app/main/default/objects/col_Project__c/fields/col_PermissionScope__c.field-meta.xml
<CustomField>
    <fullName>PermissionScope__c</fullName>
    <description>Can be corresponding to the Permission Scope field on the Agreement object. 
A classification which represents the general or primary business purpose for various types of contracts with the goal to establish access keys in CLMA assigned to contracts and user groups, while also limiting the access on a need-to- know basis, based on the associated business engagement.</description>
    <label>Permission Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collaborations</fullName>
                <default>true</default>
                <label>Collaborations</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>