force-app/main/default/objects/col_Project__c/fields/col_PONumber__c.field-meta.xml
<CustomField>
    <fullName>PONumber__c</fullName>
    <description>Used to store the Purchase Order Number of the project</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PO Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>