force-app/main/default/objects/col_Project__c/fields/col_PreviousComplianceApproval__c.field-meta.xml
<CustomField>
    <fullName>PreviousComplianceApproval__c</fullName>
    <description>Hidden field for consistent Amendment handling.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Compliance Approval</label>
    <length>38</length>
    <type>Text</type>
</CustomField>