force-app/main/default/objects/col_Project__c/fields/col_PrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>col_PrimaryContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The primary person on the account&apos;s side to deal with the project. They must with a RecordType of External.</description>
    <inlineHelpText>Contracting Party Contact Person / Principal Investigator</inlineHelpText>
    <label>Primary Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Primary Contact must be external</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>External</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>