force-app/main/default/objects/col_Project__c/fields/col_ProjectApproval__c.field-meta.xml
<CustomField>
    <fullName>ProjectApproval__c</fullName>
    <label>Project Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ApprovalStatus</valueSetName>
    </valueSet>
</CustomField>