force-app/main/default/objects/col_Project__c/fields/col_ProjectBudget__c.field-meta.xml
<CustomField>
    <fullName>ProjectBudget__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The planned project budget amount.</description>
    <label>Project Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>