force-app/main/default/objects/col_Project__c/fields/col_ProjectDescription__c.field-meta.xml
<CustomField>
    <fullName>col_ProjectDescription__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Project goal, expected outcome, Customer Value Proposition (Improvements in patient care; ​
reduction in cost, improvements in revenue); Business Case Opportunity (technology, product)​</inlineHelpText>
    <label>Project Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>