force-app/main/default/objects/col_Project__c/fields/col_ProjectID__c.field-meta.xml
<CustomField>
    <fullName>ProjectID__c</fullName>
    <description>Identifier of a Project in CollApp including the current year of the record creation</description>
    <displayFormat>{00000}</displayFormat>
    <label>Project ID Hidden</label>
    <type>AutoNumber</type>
</CustomField>