force-app/main/default/objects/col_Project__c/fields/col_ProjectIdText__c.field-meta.xml
<CustomField>
    <fullName>col_ProjectIdText__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Project Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>