force-app/main/default/objects/col_Project__c/fields/col_ProjectType__c.field-meta.xml
<CustomField>
    <fullName>col_ProjectType__c</fullName>
    <description>The possible project type, potentially to be used for Record Type settings later.</description>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>col_ProjectType</valueSetName>
    </valueSet>
</CustomField>