force-app/main/default/objects/col_Project__c/fields/col_PrototypeInvolved__c.field-meta.xml
<CustomField>
    <fullName>PrototypeInvolved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to document if a prototype is involved (Regulatory Approval)</description>
    <label>Prototype Involved?</label>
    <type>Checkbox</type>
</CustomField>