force-app/main/default/objects/col_Project__c/fields/col_PublicationsDescription__c.field-meta.xml
<CustomField>
    <fullName>PublicationsDescription__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Publications Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>