force-app/main/default/objects/col_Project__c/fields/col_RUOnlyProject__c.field-meta.xml
<CustomField>
    <fullName>col_RUOnlyProject__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to flag projects where HQ is not directly involved (only informed)</description>
    <label>RU Only Project</label>
    <type>Checkbox</type>
</CustomField>