force-app/main/default/objects/col_Project__c/fields/col_SecondaryOrgUnit__c.field-meta.xml
<CustomField>
    <fullName>col_SecondaryOrgUnit__c</fullName>
    <description>Driving permissions on the Project level</description>
    <label>Secondary Org Unit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SHS_Secondary_Org_Unit</valueSetName>
    </valueSet>
</CustomField>