force-app/main/default/objects/col_Project__c/fields/col_ShortDescription__c.field-meta.xml
<CustomField>
    <fullName>col_ShortDescription__c</fullName>
    <description>Short description about the project</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please do not include any confidential information in the Short Description</inlineHelpText>
    <label>Short Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>